Rss images rendering too large in external feed block (Bug #1219499)
Some RSS/Atom feeds provide an over-large channel image/logo which
disrupts display of the External Feed block in a Mahara Page.

See e.g. this feed link from the BBC
http://downloads.bbc.co.uk/podcasts/worldservice/digitalp/rss.xml

--- a/htdocs/theme/views.css
+++ b/htdocs/theme/views.css
@@ -729,6 +729,14 @@ ul.artefactchooser-subtabs li.current a:active {
     margin: 5px 0 0 0 !important;
 	float: left;
 }
+#blocktype_externalfeed_feed .feedlogoimage img {
+    max-width: 144px;
+    max-height: 400px;
+}
+#blocktype_externalfeed_desc {
+    padding-bottom: 5px;
+    border-bottom: 1px dotted #D1D1D1;
+}
 #containerX ul.colnav li a,
 #containerX ul.colnav li.selected span {
 	padding: 5px 7px;
